Project mercari_clone {
  database_type: "MySQL"
}

Table users {
  id bigint [pk, increment]
  name varchar(255) // ユーザー名
  email varchar(255) [unique] // メールアドレス
  password varchar(255)   // ハッシュ化されたパスワード
  image varchar(255) [note:'保存パスを追加'] // プロフィール画像のパス
  email_verified_at datetime [note: 'メール認証に使用']
  remember_token varchar(100) [note: 'ログイン保持用']
  created_at datetime
  updated_at datetime
}

Table addresses {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id] // ユーザーID
  postal_code varchar(20) [note: '数値型にしてしまうと先頭の0が消える。また足し算など演算の必要もないのでvarchar型で十分。また海外対応などへの拡張を考慮すると7桁という数字に限定しない方がいい。']   //
  address varchar(255) // 住所
  building varchar(255) // 建物名
  created_at datetime
  updated_at datetime
}

Table items {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]
  title varchar(255) // 商品名
  brand_name varchar(255) // ブランド名
  description text // 商品の説明
  price int //
  status varchar(255) [note:"on_sale,sold"] // 出品中か売却後か
  condition varchar(255) [note:"new,used"] // 商品の状態
  created_at datetime
  updated_at datetime
}

Table item_images {
  id bigint [pk, increment]
  item_id bigint [ref: > items.id] // 商品ID
  image_url varchar(255) // 画像保存パス
  sort_order int [default: 1] // 並び順指定
  created_at datetime
  updated_at datetime
}

Table orders {
  id bigint [pk, increment]
  buyer_id bigint [ref: > users.id] // 購入者のユーザーID
  item_id bigint [ref: > items.id] // 購入商品ID
  address_id bigint [ref: > addresses.id] // 購入者の住所ID
  status varchar(255) [note:"pending,confirmed,shipped,completed,cancelled,refunded" ,not null, default: 'pending'] // 注文のステータス
  payment_method varchar(255) [note:"コンビニ払い,カード支払い"] // 支払い方法
  created_at datetime
  updated_at datetime
}

Table comments {
  id bigint [pk, increment]
  item_id bigint [ref: > items.id] // コメント対象の商品ID
  user_id bigint [ref: > users.id] // コメントしたユーザーID
  content text // コメント内容
  created_at datetime
  updated_at datetime

}

Table likes {
  id bigint [pk, increment]
  item_id bigint [ref: > items.id] // いいねした商品ID
  user_id bigint [ref: > users.id] // いいねしたユーザーID
  created_at datetime
}

Table categories {
  id bigint [pk, increment]
  key varchar(100) [unique] // 例: 'fashion' ある意味物理名
  label varchar(100)        // 表示名: 'ファッション' ある意味論理名
  sort_order int [not null,default:1]           // 並び順
  created_at datetime
  updated_at datetime
}

Table category_item {
  id bigint [pk, increment]
  item_id bigint [ref: > items.id] // 商品ID
  category_id bigint [ref: > categories.id] // カテゴリID
  created_at datetime
  updated_at datetime

  // Indexes {
  //   (item_id, category_id) [unique]
  // }
}